updated variable names

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,10 @@
 	<artifactId>JenkinsSB</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>JenkinsSB</name>
+ 	<packaging>jar</packaging>
+ 	<build>
+  		 <finalName>springbootapp</finalName>
+ 	</build>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
