--- a/pom.xml
+++ b/pom.xml
@@ -34,55 +34,26 @@
 
 	<build>
 	 <finalName>springbootapp</finalName>
- 	
+	  <pluginManagement>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-
-<plugin>
-    <groupId>org.jacoco</groupId>
-    <artifactId>jacoco-maven-plugin</artifactId>
-    <version>0.7.4.201502262128</version>
-    <executions>
-        <execution>
-            <id>jacoco-initialize</id>
-            <goals>
-                <goal>prepare-agent</goal>
-            </goals>
-        </execution>
-        <execution>
-            <id>jacoco-report</id>
-            <phase>test</phase>
-            <goals>
-                <goal>report</goal>
-            </goals>
-        </execution>
-<execution>
-    <id>jacoco-check</id>
-    <phase>test</phase>
-    <goals>
-        <goal>check</goal>
-    </goals>
-    <configuration>
-        <rules>
-            <rule implementation="org.jacoco.maven.RuleConfiguration">
-                <element>BUNDLE</element>
-                <limits>
-                    <limit implementation="org.jacoco.report.check.Limit">
-                        <counter>INSTRUCTION</counter>
-                        <value>COVEREDRATIO</value>
-                        <minimum>0.30</minimum>
-                    </limit>
-                </limits>
-            </rule>
-        </rules>
-    </configuration>
-</execution>
-    </executions>
-</plugin>
+			<plugin>
+			    <groupId>org.jacoco</groupId>
+			    <artifactId>jacoco-maven-plugin</artifactId>
+			    <version>0.7.4.201502262128</version>
+			    <executions>
+			        <execution>
+			            <id>jacoco-initialize</id>
+			            <goals>
+			                <goal>prepare-agent</goal>
+			            </goals>
+			        </execution>
+			    </executions>
+			</plugin>
 		</plugins>
+		</pluginManagement>
 	</build>
-
 </project>
